<resources>
    <string name="app_name">RetrofitTutifruti</string>
    <string name="app_label">Retrofit practice app - Luis Viruena</string>

    <string name="check_out">Check out:</string>
    <string name="url_mvvm_article">https://en.wikipedia.org/wiki/Model-view-viewmodel</string>

    <string name="callback">Callback</string>
    <string name="asynctask">AsyncTask</string>
    <string name="rxjava">RxJava</string>

    <string name="intro_title">Buttons fire network calls to the Weather API.</string>
    <string name="open_weather_map_url">https://openweathermap.org/api</string>
    <string name="intro">Do you observe any differences?</string>
</resources>
